adjustments to game and play-game spec

--- a/views/choose.erb
+++ b/views/choose.erb
@@ -7,8 +7,9 @@ Rock, paper or scissors? <br>
 <% end %>
 
  <form action='/play' method='post'>
-    <input type='text' name='weapon'>
-    <input type='submit' value='Play' id='Play'>
+    <input type='submit' name='weapon' value='rock' id='Play'>
+    <input type='submit' name='weapon' value='paper' id='Play'>
+    <input type='submit' name='weapon' value='scissors' id='Play'>
   </form>
 
 </div>
